--- a/style.css
+++ b/style.css
@@ -1,43 +1,49 @@
-.placeholder{
-    color: white;
-    font-weight: bold;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 1.3em;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-transform: uppercase;
+body {
+  margin: 0;
 }
-nav{
-    background-color: tomato;
-    min-height: 60px;
+.placeholder {
+  color: white;
+  font-weight: bold;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 1.3em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-transform: uppercase;
 }
-header{
-    background-color: antiquewhite;
-    min-height: 150px ;
+nav {
+  background-color: tomato;
+  min-height: 60px;
 }
-main{
-    background-color: burlywood;
-    min-height: 350px;
+header {
+  background-color: antiquewhite;
+  min-height: 150px;
 }
-aside{
-    background-color: yellowgreen;
-    min-height: 350px;
+main {
+  background-color: burlywood;
+  min-height: 350px;
 }
-footer{
-    background-color: cornflowerblue;
-    min-height: 80px;
+aside {
+  background-color: yellowgreen;
+  min-height: 350px;
+}
+footer {
+  background-color: cornflowerblue;
+  min-height: 80px;
 }
 .row {
-    display: flex;
+  display: flex;
 }
 .column {
-    /* flex: 1 0 0; */
-    flex-grow: 1;
-    flex-shrink: 0;
-    flex-basis: 0;
+  /* flex: 1 0 0; */
+  flex-grow: 1;
+  flex-shrink: 0;
+  flex-basis: 0;
 }
-aside{
-    width: 25%;
+aside {
+  width: 25%;
 }
-
+.container {
+  max-width: 980px;
+  margin: 0 auto;
+}
